Communication Device via CanalCommunication

--- a/src/Presentation.Web/Presentation.Web/Components/Pages/Actionneur/Create.razor
+++ b/src/Presentation.Web/Presentation.Web/Components/Pages/Actionneur/Create.razor
@@ -4,6 +4,7 @@
 @inject Presentation.Web.Services.ActionneurApiService ActionneurService
 @inject Presentation.Web.Services.LocalisationApiService LocalisationService
 @inject NavigationManager Navigation
+@rendermode InteractiveServer
 
 <h3>Créer un Actionneur</h3>
 
