--- a/src/Presentation.Web/Presentation.Web/Components/Pages/Actionneur/Index.razor
+++ b/src/Presentation.Web/Presentation.Web/Components/Pages/Actionneur/Index.razor
@@ -3,6 +3,7 @@
 @using Application.DTOs.Localisation
 @inject Presentation.Web.Services.ActionneurApiService ActionneurService
 @inject Presentation.Web.Services.LocalisationApiService LocalisationService
+@rendermode InteractiveServer
 
 <h3>Liste des Actionneurs</h3>
 
