--- a/src/Presentation.Web/Presentation.Web/Components/Pages/Alerte/BySonde.razor
+++ b/src/Presentation.Web/Presentation.Web/Components/Pages/Alerte/BySonde.razor
@@ -5,6 +5,7 @@
 @using Domain.Enums
 @using Application.DTOs.Alertes
 @using Application.DTOs.Sonde
+@rendermode InteractiveServer
 
 <h3>Alertes pour la sonde @(Sonde?.Nom ?? SondeId.ToString())</h3>
 
