--- a/src/Presentation.Web/Presentation.Web/Components/Pages/Alerte/Dashboard.razor
+++ b/src/Presentation.Web/Presentation.Web/Components/Pages/Alerte/Dashboard.razor
@@ -3,6 +3,7 @@
 @inject NavigationManager Navigation
 @using Domain.Enums
 @using Application.DTOs.Alertes
+@rendermode InteractiveServer
 
 <h3>Dashboard des alertes</h3>
 
