--- a/src/Presentation.Web/Presentation.Web/Components/Pages/Alerte/Details.razor
+++ b/src/Presentation.Web/Presentation.Web/Components/Pages/Alerte/Details.razor
@@ -2,6 +2,8 @@
 @inject Presentation.Web.Services.AlerteApiService AlerteApi
 @inject NavigationManager Navigation
 @using Application.DTOs.Alertes
+@using Domain.Enums
+@rendermode InteractiveServer
 
 <h3>Détails de l'alerte</h3>
 
