--- a/src/Presentation.Web/Presentation.Web/Components/Pages/EtatActionneur/Delete.razor
+++ b/src/Presentation.Web/Presentation.Web/Components/Pages/EtatActionneur/Delete.razor
@@ -2,7 +2,7 @@
 @using Application.DTOs.Actionneur
 @inject Presentation.Web.Services.ActionneurApiService ActionneurService
 @inject NavigationManager Navigation
-
+@rendermode InteractiveServer
 <h3>Supprimer Actionneur</h3>
 
 @if (ErrorMessage != null)
