--- a/src/Presentation.Web/Presentation.Web/Components/Layout/NavMenu.razor
+++ b/src/Presentation.Web/Presentation.Web/Components/Layout/NavMenu.razor
@@ -1,3 +1,4 @@
+@rendermode InteractiveServer
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">Presentation.Web</a>
@@ -11,6 +12,12 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="bi bi-house-door-fill" aria-hidden="true"></span> Home
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Dashboard">
+                <span class="bi bi-speedometer2" aria-hidden="true"></span> Dashboard
             </NavLink>
         </div>
 
