--- a/src/Presentation.Web/Presentation.Web/Components/Pages/Actionneur/Edit.razor
+++ b/src/Presentation.Web/Presentation.Web/Components/Pages/Actionneur/Edit.razor
@@ -4,6 +4,7 @@
 @inject Presentation.Web.Services.ActionneurApiService ActionneurService
 @inject Presentation.Web.Services.LocalisationApiService LocalisationService
 @inject NavigationManager Navigation
+@rendermode InteractiveServer
 
 <h3>Modifier Actionneur</h3>
 
