--- a/src/Presentation.Web/Presentation.Web/Components/Pages/Sonde/Index.razor
+++ b/src/Presentation.Web/Presentation.Web/Components/Pages/Sonde/Index.razor
@@ -61,7 +61,7 @@
                 </td>
                 <td>@s.DateInstallation.ToShortDateString()</td>
                 <td>
-                    <a class="btn btn-sm btn-info me-1" href="@($"/sonde/details/{s.Id}")">Details</a>
+                    <a class="btn btn-sm btn-info me-1" href="@($"/sonde/{s.Id}/details")">Details</a>
                     <a class="btn btn-sm btn-warning me-1" href="@($"/sonde/edit/{s.Id}")">Edit</a>
                     <a class="btn btn-sm btn-danger" href="@($"/sonde/delete/{s.Id}")">Delete</a>
                     <a class="btn btn-secondary" href="@($"/sonde/{s.Id}/seuilalerte")">Seuils alerte</a>
